--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "react-refresh-typescript": "^2.0.4",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.9.1",
+    "type-fest": "^2.19.0",
     "typescript": "^4.5.5",
     "typescript-plugin-css-modules": "^5.0.1",
     "webpack": "^5.69.1",
