--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,8 @@
     "allowSyntheticDefaultImports": true, // Разрешить импортировать модули не имеющие внутри себя "import default"
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "build"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
