--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
     "lint:ts": "npx eslint 'src/**/*.{ts,tsx}'",
-    "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix"
+    "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
+    "lint:scss": "npx stylelint 'src/**/*.scss'",
+    "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix"
   },
   "keywords": [],
   "author": "Alexeu Vorona",
@@ -33,6 +35,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-functional": "^5.0.8",
+    "eslint-plugin-i18next": "^6.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -46,6 +49,13 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^15.6.2",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-order": "^6.0.3",
+    "stylelint-scss": "^5.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
     "type-fest": "^2.19.0",
