--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:ts": "npx eslint 'src/**/*.{ts,tsx}'",
     "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
     "lint:scss": "npx stylelint 'src/**/*.scss'",
-    "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix"
+    "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix",
+    "test": "jest --config ./config/jest/jest.config.ts"
   },
   "keywords": [],
   "author": "Alexeu Vorona",
@@ -18,8 +19,10 @@
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@svgr/webpack": "^6.2.1",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -27,6 +30,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.6.0",
     "eslint": "^8.41.0",
@@ -43,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.8.8",
     "react-refresh-typescript": "^2.0.9",
