--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,16 +44,22 @@
     }
   },
   "rules": {
-    "no-console": "warn",
-    "react/prop-types": "off",
+    "no-console": "off",
     "no-param-reassign": "off",
-    "react/display-name": "off",
     "no-underscore-dangle": "off",
     "testing-library/no-debug": 0,
+    "react/prop-types": "off",
+    "react/display-name": "off",
     "react/no-array-index-key": "off",
-    "functional/no-try-statement": "off",
     "react-hooks/exhaustive-deps": "off",
+    "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/jsx-no-useless-fragment": ["error", { "allowExpressions": true }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "arrow-function", "unnamedComponents": "arrow-function" }
+    ],
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-var-requires": "off",
@@ -61,19 +67,17 @@
     "@typescript-eslint/no-unused-expressions": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "functional/immutable-data": "off",
+    "functional/no-try-statement": "off",
     "functional/no-throw-statement": "off",
     "functional/functional-parameters": "off",
     "functional/no-expression-statement": "off",
     "functional/no-conditional-statement": "off",
-    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
-    "react/require-default-props": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "import/extensions": [
       "error",
       "ignorePackages",
