--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@svgr/webpack": "^6.2.1",
+    "@types/compose-function": "^0.0.30",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
+    "@types/react": "^18.0.9",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
@@ -71,12 +72,14 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "compose-function": "^3.0.3",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-i18next": "^11.15.5",
+    "react-error-boundary": "^4.0.8",
+    "react-i18next": "^11.18.6",
     "react-router-dom": "^6.2.1"
   }
 }
