--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
     "lint:scss": "npx stylelint 'src/**/*.scss'",
     "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix",
-    "test": "jest --config ./config/jest/jest.config.ts"
+    "test": "jest --config ./config/jest/jest.config.ts",
+    "analyze:dev": "npm run build:dev --env analyze=true",
+    "analyze:prod": "npm run build:prod --env analyze=true"
   },
   "keywords": [],
   "author": "Alexeu Vorona",
@@ -28,6 +30,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
@@ -68,6 +71,7 @@
     "typescript": "^5.0.4",
     "typescript-plugin-css-modules": "^5.0.1",
     "webpack": "^5.69.1",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
   },
