--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix",
     "test": "jest --config ./config/jest/jest.config.ts",
     "analyze:dev": "npm run build:dev --env analyze=true",
-    "analyze:prod": "npm run build:prod --env analyze=true"
+    "analyze:prod": "npm run build:prod --env analyze=true",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "build-storybook": "storybook build -c ./config/storybook"
   },
   "keywords": [],
   "author": "Alexeu Vorona",
@@ -24,6 +26,13 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@storybook/react-webpack5": "^7.0.18",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -52,6 +61,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -62,6 +72,8 @@
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "storybook": "^7.0.18",
+    "storybook-css-modules": "^1.0.8",
     "style-loader": "^3.3.1",
     "stylelint": "^15.6.2",
     "stylelint-config-rational-order": "^0.1.2",
@@ -72,6 +84,7 @@
     "stylelint-scss": "^5.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "type-fest": "^2.19.0",
     "typescript": "^5.0.4",
     "typescript-plugin-css-modules": "^5.0.1",
