--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
     "lint:scss": "npx stylelint 'src/**/*.scss'",
     "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix",
-    "test": "jest --config ./config/jest/jest.config.ts",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:ui": "loki test",
+    "test:ui:ok": "loki approve",
     "analyze:dev": "npm run build:dev --env analyze=true",
     "analyze:prod": "npm run build:prod --env analyze=true",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
-    "build-storybook": "storybook build -c ./config/storybook"
+    "storybook:build": "storybook build -c ./config/storybook"
   },
   "keywords": [],
   "author": "Alexeu Vorona",
@@ -66,6 +68,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "loki": "^0.31.2",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.8.8",
     "react-refresh-typescript": "^2.0.9",
@@ -103,5 +106,20 @@
     "react-error-boundary": "^4.0.8",
     "react-i18next": "^11.18.6",
     "react-router-dom": "^6.2.1"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.app",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.app",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
