--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: install dependencies
-        run: npm install
+        run: npm install --force
 
       - name: build prodaction project
         run: npm run build:prod
