--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,19 +31,25 @@ jobs:
         run: npm install --force
 
       - name: build prodaction project
+        if: always()
         run: npm run build:prod
 
       - name: linting typescript
+        if: always()
         run: npm run lint:ts
 
       - name: linting scss modules
+        if: always()
         run: npm run lint:scss
 
       - name: unit testing
+        if: always()
         run: npm run test:unit
 
       - name: build storybook
+        if: always()
         run: npm run storybook:build
 
       - name: screenshot testing
+        if: always()
         run: npm run test:ui:ci
