--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "allowSyntheticDefaultImports": true, // Разрешить импортировать модули не имеющие внутри себя "import default"
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": ["src/**/*", "__tests__/**/*", "config/**/*", "webpack.config.ts"],
+  "include": ["src/**/*", "__tests__/**/*", "config/**/*", "webpack.config.ts", "scripts/**/*"],
   "exclude": ["node_modules", "build"],
   "ts-node": {
     "compilerOptions": {
