--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     # The type of machine to run the job on
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     strategy:
       # Node versions list
       matrix:
