--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
   },
   "rules": {
     "no-console": "off",
+    "linebreak-style": "off",
     "no-param-reassign": "off",
     "no-underscore-dangle": "off",
     "testing-library/no-debug": 0,
