--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "webpack serve --env port=3000",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
-    "lint:ts": "eslint 'src/**/*.{ts,tsx}'",
+    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
-    "lint:scss": "stylelint 'src/**/*.scss'",
+    "lint:scss": "stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "loki test",
