add end of line rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -92,6 +92,12 @@
       "error",
       "ignorePackages",
       { "js": "never", "jsx": "never", "ts": "never", "tsx": "never" }
+    ],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
     ]
   }
 }
