add modal, potal, change header

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,9 +61,10 @@
     "react/prop-types": "off",
     "react/display-name": "off",
     "react/no-array-index-key": "off",
-    "react-hooks/exhaustive-deps": "off",
     "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error",
     "react/jsx-no-useless-fragment": ["error", { "allowExpressions": true }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "react/function-component-definition": [
