--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --env port=3000",
+    "start": "webpack serve --env port=4000",
+    "start:dev:server": "node ./json-server/index.js",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
@@ -42,8 +43,10 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^14.4.3",
     "@types/compose-function": "^0.0.30",
     "@types/jest": "^27.4.1",
+    "@types/json-server": "^0.14.4",
     "@types/node": "^17.0.21",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^17.0.11",
@@ -72,6 +75,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "json-server": "^0.17.0",
     "loki": "^0.31.2",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.8.8",
@@ -102,6 +106,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "compose-function": "^3.0.3",
     "concurrently": "^8.1.0",
     "deelay": "^2.0.0",
@@ -111,7 +116,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^4.0.8",
+    "react-focus-lock": "^2.9.4",
     "react-i18next": "^11.18.6",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1"
   },
   "loki": {
