--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-storybook": "^0.6.12",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "json-server": "^0.17.0",
@@ -104,11 +105,11 @@
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4",
-    "husky": "^8.0.0"
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^1.4.0",
     "compose-function": "^3.0.3",
     "concurrently": "^8.1.0",
     "deelay": "^2.0.0",
@@ -121,7 +122,8 @@
     "react-focus-lock": "^2.9.4",
     "react-i18next": "^11.18.6",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "redux-persist": "^6.0.0"
   },
   "loki": {
     "configurations": {
