--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     },
     "noImplicitAny": true, // Показывать ошибку, если где-то задан тип "any"
     "module": "ESNext", // Определяет тип импорта кода в итоговом файле, прописанном в "outFile". Необходимо задавать при использовании опции "outFile"
+    "strict": true, // Включить ли все строги проверки типов сразу: noImplicitAny, noImplicitThis, alwaysStrict, strictNullChecks, strictFunctionTypes, strictPropertyInitialization?
     "target": "es5", // Тип кода создаваемого итогового файла
     "jsx": "react-jsx", // Включать ли поддержку ".tsx" файлов
     "allowJs": true, // Разрешать компилировать файлы с JavaScript-кодом
