--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:dev": "webpack --env mode=development",
-    "build:prod": "webpack --env mode=production",
+    "build:prod": "webpack --env mode=production apiUrl=https://server-production-project.vercel.app",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
     "lint:scss": "stylelint \"**/*.scss\"",
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^5.59.7",
     "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.6.0",
     "eslint": "^8.41.0",
     "eslint-config-airbnb": "^19.0.4",
