--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "react-i18next": "^11.18.6",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-virtuoso": "^4.5.0",
     "redux-persist": "^6.0.0"
   },
   "loki": {
