--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev:server": "node ./json-server/index.js",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production apiUrl=https://server-production-project.vercel.app",
-    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "lint:ts": "eslint 'src/**/*.{ts,tsx}'",
     "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
     "lint:scss": "stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix",
@@ -70,6 +70,7 @@
     "eslint-plugin-i18next": "^6.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-methodology-feature-sliced-design": "^0.0.3",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
