--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start:dev:server": "node ./json-server/index.js",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production apiUrl=https://server-production-project.vercel.app",
-    "lint:ts": "eslint 'src/**/*.{ts,tsx}'",
-    "lint:ts:fix": "npx eslint 'src/**/*.{ts,tsx}' --fix",
+    "lint:ts": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:ts:fix": "npx eslint \"src/**/*.{ts,tsx}\" --fix",
     "lint:scss": "stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint 'src/**/*.scss' --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
