--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^1.4.0",
     "compose-function": "^3.0.3",
