--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "root": "true",
   "scripts": {
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
@@ -50,8 +51,8 @@
     "@types/jest": "^27.4.1",
     "@types/json-server": "^0.14.4",
     "@types/node": "^17.0.21",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-dev-server": "^4.7.2",
@@ -91,6 +92,7 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "storybook": "^7.0.18",
+    "storybook-addon-mock": "^4.2.1",
     "storybook-css-modules": "^1.0.8",
     "style-loader": "^3.3.1",
     "stylelint": "^15.6.2",
@@ -123,8 +125,8 @@
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "qs": "^6.11.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.8",
     "react-focus-lock": "^2.9.4",
     "react-i18next": "^11.18.6",
