add vite for dev mode

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "root": "true",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
+    "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:dev": "webpack --env mode=development",
     "build:prod": "webpack --env mode=production apiUrl=https://server-production-project.vercel.app",
@@ -60,6 +62,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "@vitejs/plugin-react": "^4.0.4",
     "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^11.0.0",
@@ -112,6 +115,8 @@
     "type-fest": "^2.19.0",
     "typescript": "^5.0.4",
     "typescript-plugin-css-modules": "^5.0.1",
+    "vite": "^4.4.9",
+    "vite-plugin-svgr": "^3.2.0",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.10.0",
